--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -350,7 +350,7 @@
 	    :tree-type week :clock-in 1 :empty-lines 1 :kill-buffer 1)
 	   ("i" "interrupt task" entry
 	    (file ,(expand-file-name "inbox.org" org-agenda-dir))
-	    "* NEXT %?\n%U\n" :clock-in 1 :clock-keep 1)
+	    "* NEXT %^{what has interrupted?}" :clock-in 1 :clock-keep 1)
 	   ("e" "Collect hacking Emacs ideas!" item
 	    (file+headline ,(expand-file-name "inbox.org" org-agenda-dir) "Hacking Emacs")
 	    "- [ ] %?"
