feat: add acronym for vocabulary

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -339,9 +339,10 @@
 	   ("c" "code snippet" plain (file ,(expand-file-name "snippets.org" org-agenda-dir))
 	    ,(concat "%[" (expand-file-name "snippet.tmpl" org-agenda-dir) "]")
 	    :tree-type week)
-	   ("v" "vocabulary" table-line (file+headline ,(expand-file-name "vocabulary.org" org-agenda-dir) "Vocabulary Notebook")
-	    ,(concat "%[" (expand-file-name "vocabulary.tmpl" org-agenda-dir) "]")
-	    :tree-type week)
+	   ("v" "vocabulary" table-line (file+headline ,(expand-file-name "vocabulary.org" org-agenda-dir) "Vocabularies")
+	    "|%?||||")
+	   ("a" "acronym" table-line (file+headline ,(expand-file-name "vocabulary.org" org-agenda-dir) "Acronyms")
+	    "|%?|||")
 	   ("r" "retrospective note" plain (file+olp+datetree ,(expand-file-name "retrospect.org" org-agenda-dir))
 	    ,(concat "%[" (expand-file-name "retrospect.tmpl" org-agenda-dir) "]")
 	    :tree-type week)
@@ -589,11 +590,6 @@
 	   ,#+BEGIN_SRC %^{language|shell|elisp|c|c++} :eval never :exports code
 	       %?
 	   ,#+END_SRC
-    #+END_SRC
-
-*** org-mode vocabulary template
-    #+BEGIN_SRC org :tangle "~/agendas/vocabulary.tmpl" :noweb yes :mkdirp *
-      | %? |   |   |   |
     #+END_SRC
 *** org-mode meeting template
     #+BEGIN_SRC org :tangle "~/agendas/meeting.tmpl" :noweb yes :mkdirp yes
