feat: add code capture languate

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -587,7 +587,7 @@
 *** org-mode code template
     #+BEGIN_SRC org :tangle "~/agendas/snippet.tmpl" :noweb yes :mkdirp yes
       ,**** %^{purpose of the snippet} 
-	   ,#+BEGIN_SRC %^{language|shell|elisp|c|c++} :eval never :exports code
+	   ,#+BEGIN_SRC %^{language|shell|elisp|dot|ditaa|latex|ocaml|plantuml|c|c++} :eval never :exports code
 	       %?
 	   ,#+END_SRC
     #+END_SRC
