--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -21,6 +21,8 @@
       set -g status-keys emacs
       set -g status off
       set -g pane-border-status top
+      set -g base-index 1
+      setw -g pane-base-index 1
       set -g renumber-windows on
 
       set -g @copy_mode_yank "M-w"
