feat: update the retro template

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -566,7 +566,9 @@
 *** org-mode retrospect temlate
     #+BEGIN_SRC org :tangle "~/agendas/retrospect.tmpl" :noweb yes :mkdirp yes
       |----------------------------+----|
-      | 昨天学到什么？             | %? |
+      | 我的长远目标是什么？       | %? |
+      |----------------------------+----|
+      | 昨天学到什么？             |    |
       |----------------------------+----|
       | 昨天得到什么教训？         |    |
       |----------------------------+----|
