--- a/hammers/emacs/terminal.org
+++ b/hammers/emacs/terminal.org
@@ -14,11 +14,11 @@
 ** eshell
 
 *** 环境变量
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (setenv "PAGER" "cat")
     #+END_SRC   
 *** 配置选项
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package shrink-path)
       (use-package eshell
 	:after shrink-path
@@ -50,7 +50,7 @@
 			  ))))
     #+END_SRC
 *** alias
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package eshell
 	:hook
 	(eshell-mode . (lambda() 
@@ -68,14 +68,14 @@
 			   (eshell/alias "ll" (concat ls " -AlohG --color=always"))))))
     #+END_SRC
 *** git
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (defun eshell/gst (&rest args)
 	(magit-status (pop args) nil)
 	(eshell/echo)) 
     #+END_SRC
 *** find 命令
     使用命令行程序来进行 find, 而不是使用 eshell 的 find 函数
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (defun eshell/find (&rest args)
 	"Wrapper around the ‘find’ executable."
 	(let ((cmd (concat "find " (string-join args " "))))
@@ -118,13 +118,13 @@
 	  (find-file file)))
     #+END_SRC
 *** autojump
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package eshell-autojump
 	:custom
 	(eshell-directory-name (expand-file-name "eshell" m/conf.d)))
     #+END_SRC
 *** eshell toggle window
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package eshell-toggle
 	:bind
 	(("s-<f12>" . eshell-toggle)))
@@ -132,7 +132,7 @@
 
 
 *** clear
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package eshell
 	:config
 	(defun eshell/clear ()
@@ -142,6 +142,6 @@
 	    (eshell-send-input))))
     #+END_SRC
 ** provide
-   #+BEGIN_SRC elisp :eval never :exports code
+   #+BEGIN_SRC elisp :eval never :exports code :comments link
      (provide 'init-terminal)
    #+END_SRC
