--- a/hammers/emacs/ui.org
+++ b/hammers/emacs/ui.org
@@ -12,7 +12,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** 界面配置
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (setq use-file-dialog nil)
       (setq use-dialog-box nil)
       (setq inhibit-startup-screen t)
@@ -51,18 +51,18 @@
     #+END_SRC
 
 *** 禁用鼠标
-    #+BEGIN_SRC elisp :exports code :eval never :tangle no
+    #+BEGIN_SRC elisp :exports code :eval never :tangle no :comments link
       (use-package disable-mouse
 	:config
 	(global-disable-mouse-mode))
     #+END_SRC
 
 *** yes-no -> y-n
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (defalias 'yes-or-no-p 'y-or-n-p)
     #+END_SRC
 *** macos 不显示 title bar
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
     (use-package ns-auto-titlebar
       :if (eq m/os 'macos)
       :config
@@ -70,7 +70,7 @@
     #+END_SRC
 
 *** 安装主题
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package color-theme-sanityinc-tomorrow
 	:config
 	(setq custom-safe-themes t)
@@ -78,7 +78,7 @@
     #+END_SRC
 
 *** 安装图标库
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package all-the-icons
 	:config
 	(unless (or (member "all-the-icons" (font-family-list)) m/offline)
@@ -89,7 +89,7 @@
     #+END_SRC
 
 *** 快速切换窗口
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package ace-window
 	:ensure t
 	:custom
@@ -100,7 +100,7 @@
     #+END_SRC
 
 *** 分页
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package page-break-lines
 	:diminish page-break-lines-mode
 	:config
@@ -108,19 +108,19 @@
     #+END_SRC
     
 *** 命令行控制窗口
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package moom
 	:config (moom-mode))
     #+END_SRC
 
 *** 自动提示可选命令
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package which-key
 	:config
 	(which-key-mode t))
     #+END_SRC
 *** counsel
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package counsel
 	:diminish ivy-mode counsel-mode  
 	:custom
@@ -193,7 +193,7 @@
     #+END_SRC
 
 *** ivy-xref
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package ivy-xref
 	:after (ivy)
 	:init (if (< emacs-major-version 27)
@@ -201,7 +201,7 @@
 		(setq xref-show-definitions-function #'ivy-xref-show-defs)))
     #+END_SRC
 *** dashboard
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
       (use-package dashboard
 	:diminish dashboard-mode
 	:config
@@ -217,6 +217,6 @@
 	(after-init . dashboard-setup-startup-hook))
     #+END_SRC
 *** provide
-    #+BEGIN_SRC elisp :eval never :exports code
+    #+BEGIN_SRC elisp :eval never :exports code :comments link
 (provide 'init-ui)
     #+END_SRC
