--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -41,7 +41,7 @@
        (use-package pyim-basedict
 	 :ensure nil
 	 :config (pyim-basedict-enable))
-  
+
        (setq default-input-method "pyim")
 
        ;; 使用全拼
@@ -127,13 +127,13 @@
 						    (setq pyim-default-scheme 'rime-quanpin)))))))
     #+END_SRC
 
-    #+BEGIN_SRC yaml :tangle "~/.emacs.d/rime/default.custom.yaml" :noweb yes :eval never :exports code :comments link
-      patch:
-	menu/page_size: 100
-	speller/auto_select: false
-	speller/auto_select_unique_candidate: false
-	schema_list: 
-	  - schema: luna_pinyin_simp
+    #+BEGIN_SRC yaml :tangle "~/.emacs.d/rime/default.custom.yaml" :noweb yes :eval never :exports code
+	patch:
+	  menu/page_size: 100
+	  speller/auto_select: false
+	  speller/auto_select_unique_candidate: false
+	  schema_list: 
+	    - schema: luna_pinyin_simp
     #+END_SRC
 
 
